correction du contraste,mise en place du background attachement,ajout aria label et title pg1/mise en place du head et correction du contraste pg2.

--- a/style.css
+++ b/style.css
@@ -742,6 +742,10 @@ h4 {
     margin-bottom: 14px;
     margin-top: 24px;
 }
+.addcolor
+{
+    color: blue;
+}
 
 .white {
     color: #FFFFFF!important;
@@ -761,7 +765,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: #465B57;
     padding: 40px 40px 40px 40px;
 }
 
@@ -779,7 +783,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #983B18;
 }
 
 .tc-white {
@@ -827,10 +831,12 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
+    background-attachment: local;
 }
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
+    background-attachment: local;
 }
 
 @media (max-width: 1024px) {
